# jpp

./: .gitignore  nginx.conf  pyproject.toml
jpp/: app.py
jpp/templates/: index.html  index.html.jinja2  movie.html
